# bfu-oop-labs

./: README.md
lab1/: CMakeLists.txt  main.cpp
lab1/inc/: Calculator.h  CalculatorCentralDifferential.h  CalculatorLeftDifferential.h  CalculatorRightDifferential.h  index.h
lab1/src/: CalculatorCentralDifferential.cpp  CalculatorLeftDifferential.cpp  CalculatorRightDifferential.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/inc/: Fraction.h  MathHelper.h
lab2/src/: Fraction.cpp  MathHelper.cpp
lab3/: Array3D.cpp  CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  boot.h  main.cpp
lab4/src/: Keyboard.cpp  Keyboard.h
lab4/src/Command/: Command.h  Group.cpp  Group.h  StringCommand.cpp  StringCommand.h
lab5/: CMakeLists.txt  main.cpp
lab5/data/: user.txt
lab5/inc/: App.h  FileUserManager.h  FileUserRepository.h  IUserManager.h  IUserRepository.h  User.h
lab5/src/: App.cpp  FileUserManager.cpp  FileUserRepository.cpp
lab6/: CMakeLists.txt  main.cpp
lab6/src/: Control.h  Form.cpp  Form.h
lab6/src/Linux/: LinuxButton.cpp  LinuxButton.h  LinuxControlFactory.cpp  LinuxControlFactory.h  LinuxLabel.cpp  LinuxLabel.h  LinuxTextBox.cpp  LinuxTextBox.h
lab6/src/MacOS/: MacOSButton.cpp  MacOSButton.h  MacOSControlFactory.cpp  MacOSControlFactory.h  MacOSLabel.cpp  MacOSLabel.h  MacOSTextBox.cpp  MacOSTextBox.h
lab6/src/Windows/: WindowsButton.cpp  WindowsButton.h  WindowsControlFactory.cpp  WindowsControlFactory.h  WindowsLabel.cpp  WindowsLabel.h  WindowsTextBox.cpp  WindowsTextBox.h
